src/ui/snapshots/herdr_worktree_nav__ui__render__tests__an_empty_search_field_with_the_keyboard_shows_only_its_cursor.snap
---
source: src/ui/render.rs
expression: "screen(&state, 92, 6)"
---
" / █                                                                                5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"   ├── ● main                  /wt/main                                                    █"
" ◆ │  ├── ● claude             w1:p1                                                       │"
" me/app · main · w1:p1 · working · /wt/main ────────────────────────────────────────────────"
" ↵ keep search  ctrl+u clear  esc cancel  ↑↓ move  ←→ repo                                  "
