src/ui/snapshots/herdr_worktree_nav__ui__render__tests__draws_branches_in_the_same_chrome_as_the_panes_view.snap
---
source: src/ui/render.rs
expression: "branches_screen(&branches_state(), 92, 12)"
---
" / search branches                                                   ⇅ state ↓   5 branches "
" me/app · /src/app ─────────────────────────────────────────────────────────────────────────"
"   ● feat/login   running      #123 Add the login screen (draft)                            "
"   ○ fix/crash    checked out  latest work on fix/crash                                     "
"   · main         local        latest work on main                                          "
"   · chore/deps   local        latest work on chore/deps                                    "
"   ↓ feat/search  remote                                                                    "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" feat/login · open in w2:p1 · /wt/feat-login · #123 Add the login screen (draft) ───────────"
" ↵ choose  j/k move  / search  f fetch  i order  shift+i reverse  ⇥ panes  esc back  q close"
