src/ui/snapshots/herdr_worktree_nav__ui__render__tests__draws_the_destination_preview_at_a_realistic_size.snap
---
source: src/ui/render.rs
expression: "branches_screen(&state, 110, 22)"
---
" where should chore/deps go?                                                                                  "
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" here            split right                    w1  app / agents                                              "
"                 split down                     ┌───────────┬────────────┐                                    "
" existing tab    w1  app / logs                 │ ● claude  │ + chore/de…│                                    "
" existing space  w3  notes → new tab            │ w1:p1     │            │                                    "
" new space       on its own                     ├───────────┴────────────┤                                    "
" existing tab    w3  notes / zoomed             │ · shell                │                                    "
"                                                │ w1:p9                  │                                    "
"                                                │                        │                                    "
"                                                └────────────────────────┘                                    "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" chore/deps opens beside the pane you came from, split right ─────────────────────────────────────────────────"
" ↵ open here  ↑↓ move  esc back  q close                                                                      "
